@@ -436,6 +436,9 @@ to add more sub-trees to the active model after calling
 is called more than once.
 ``rt_prep: no solids to prep'' when there are no valid solids
 in the model.
+
+The LIBRT_DEBUG environment variable may be set to the hexadecimal 
+bit vector as descibed by raytrace.h.
 .SH BUGS
 On a VAX, the rootfinder detects ``hard'' cases by taking a SIGFPE
 and retrying
